@@ -1,8 +1,9 @@
 x.x.x
 Feature: Database encryption (config + text only, blobs remain unencrypted)
+Feature: Small colored shape signalling connectivity state in chat overview
 UI: Add account ID to account info popup in Known Accounts page
 Other: Use deltachat-core-rust v1.122.0
-Other: In case of mismatch, correct filename extensions of image attachments so QML displays them
+Other: In case of mismatch, filename extensions of image attachments are corrected so QML displays them
 
 1.1.1 2023-09-13
 Bugfix: Settings item "Only fetch from DeltaChat folder" did not act correctly
